# wg-nx

./: .gitignore  .gitmodules  Dockerfile  LICENSE.md  Makefile  README.md  dev.sh
include/: wg_relay.h  wireguard.h
lwip-relay/include/: lwipopts.h  wg_lwip_relay.hpp  wg_netif.h
lwip-relay/include/arch/: cc.h
lwip-relay/src/: sys_arch.c  wg_lwip_relay.cpp  wg_netif.c
src/: blake2s_neon.c  blake2s_neon.h  platform_switch.c  wg_chacha20_neon.c  wg_chacha20_neon.h  wg_crypto.c  wg_internal.h  wg_noise.c  wg_poly1305_neon.c  wg_poly1305_neon.h  wg_relay.c  wg_thread.c  wg_thread.h  wireguard.c
wg-tester/: CMakeLists.txt
wg-tester/src/: main.cpp
